Tryed to fix z-index for dialogs in IE

--- a/sites/all/themes/ebog/css/style.css
+++ b/sites/all/themes/ebog/css/style.css
@@ -930,3 +930,6 @@ input[type=submit]:hover {
   width: 380px;
   margin-right: 0px; 
 }
+.ui-dialog {
+  z-index: 9999;
+}
